# TpIntegradorNav

./: .gitignore
TP2-Grupo7/: README.md
TP2-Grupo7/robot_fisico/: README.md
TP2-Grupo7/robot_fisico/esp32_firmware/: sdkconfig
TP2-Grupo7/robot_fisico/esp32_firmware/main/: CMakeLists.txt  encoder.c  encoder.h  main.c  motor_driver.c  motor_driver.h  ultrasonic.c  ultrasonic.h
TP2-Grupo7/src/my_robot_description/: CMakeLists.txt
TP2-Grupo7/src/my_robot_description/launch/: gazebo.launch.py
TP2-Grupo7/src/my_robot_description/rviz/: urdf_config.rviz
TP2-Grupo7/src/my_robot_description/urdf/: common_properties.xacro  mobile_base.xacro
TP2-Grupo7/src/my_robot_description/worlds/: depot.world  maze.world  maze_2.world  mazeislands.world
TP2-Grupo7/src/my_robot_navigation/: package.xml  setup.py
TP2-Grupo7/src/my_robot_navigation/config/: amcl.yaml  nav2_params.yaml  occupancy_grid.yaml  slam_toolbox.yaml
TP2-Grupo7/src/my_robot_navigation/launch/: localization.launch.py  nav_launch.py  occupancy_grid_launch.py  (+1 more)
TP2-Grupo7_Parte2/: README.md
TP2-Grupo7_Parte2/src/my_robot_description/: package.xml
TP2-Grupo7_Parte2/src/my_robot_description/config/: bridge.yaml
TP2-Grupo7_Parte2/src/my_robot_description/launch/: gazebo.launch.py
TP2-Grupo7_Parte2/src/my_robot_description/rviz/: urdf_config.rviz
TP2-Grupo7_Parte2/src/my_robot_description/urdf/: mobile_base.xacro
TP2-Grupo7_Parte2/src/my_robot_description/worlds/: empty_world.sdf  living_room.world  mazethree.world  mazetwo.world
TP2-Grupo7_Parte2/src/my_robot_navigation/: setup.py
(+10 files in other folders)
